# ray

./: .bazelrc  BUILD.bazel  MODULE.bazel  WORKSPACE  WORKSPACE.old  bazel_cmd.sh
bazel/: cython.BUILD  hiredis.BUILD  nlohmann_json.BUILD  ray_deps_setup.bzl
cpp/: BUILD.bazel
python/: build-wheel-manylinux2014.sh  build.py  run.sh  setup.py
python/ray/air/: BUILD
python/ray/data/: BUILD
python/ray/serve/: long_poll.py
python/ray/train/: delayed_worker_group.py  trainer.py
python/ray/train/backends/: elastic_backend.py  horovod.py
src/ray/core_worker/lib/java/: BUILD.bazel
src/ray/core_worker/test/: task_event_buffer_export_event_test.cc
src/ray/gcs/gcs_server/: BUILD.bazel
src/ray/gcs/gcs_server/test/: gcs_actor_manager_test.cc
src/ray/object_manager/: common.h
src/ray/protobuf/: BUILD
src/ray/pubsub/: subscriber.cc
src/ray/raylet_client/: raylet_client.cc
src/ray/util/: event.cc
